[gd_scene load_steps=18 format=3 uid="uid://b087m2d2tfhaj"]

[ext_resource type="Script" uid="uid://dpgq3u5gbeyyh" path="res://SCRIPTS/minigame_handler.gd" id="1_ok36d"]
[ext_resource type="Script" uid="uid://dy1g2736ej0ck" path="res://SCRIPTS/cooking_minigame.gd" id="2_lre2m"]
[ext_resource type="Texture2D" uid="uid://cbqi4tn7o6278" path="res://SPRITES/minigames/cooking_fire.png" id="3_uj045"]
[ext_resource type="Texture2D" uid="uid://ra1n6thn0det" path="res://SPRITES/minigames/pan.png" id="4_jemb3"]
[ext_resource type="Texture2D" uid="uid://b33u5j54j2g8j" path="res://SPRITES/minigames/panflip.png" id="5_uga2l"]
[ext_resource type="FontFile" uid="uid://cf50jb0yimike" path="res://FONTS/GeosansLight.ttf" id="6_lre2m"]
[ext_resource type="Script" uid="uid://c6f7plih15jqn" path="res://SCENES/fishing_minigame.gd" id="7_uj045"]
[ext_resource type="Texture2D" uid="uid://kbnnlwvqgpfb" path="res://seaweed.png" id="8_uga2l"]
[ext_resource type="Texture2D" uid="uid://b0l6fqgchvm16" path="res://crosshair.png" id="9_uga2l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpyik"]
size = Vector2(300, 39.5)

[sub_resource type="Curve2D" id="Curve2D_rpyik"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 440, 190, 0, 0, 0, 0, 700, 190)
}
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_3o65x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_jemb3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_uga2l")
}],
"loop": true,
"name": &"flip",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbnn2"]
size = Vector2(60, 47)

[sub_resource type="Curve2D" id="Curve2D_uga2l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 416, 152, 0, 0, 0, 0, 416, 496, 0, 0, 0, 0, 736, 496, 0, 0, 0, 0, 736, 152, 0, 0, 0, 0, 416, 152)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jemb3"]
size = Vector2(20, 414)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxykw"]
size = Vector2(80, 80)

[sub_resource type="Curve2D" id="Curve2D_jxykw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 520, 208, 0, 0, 0, 0, 640, 216, 0, 0, 0, 0, 520, 264, 0, 0, 0, 0, 656, 304, 0, 0, 0, 0, 536, 344, 0, 0, 0, 0, 648, 376, 0, 0, 0, 0, 544, 416)
}
point_count = 7

[node name="minigame_handler" type="Node2D"]
script = ExtResource("1_ok36d")

[node name="cooking_minigame" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_lre2m")

[node name="background" type="ColorRect" parent="cooking_minigame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.40438, 0.624882, 0.784457, 1)

[node name="outline" type="ColorRect" parent="cooking_minigame"]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -152.0
offset_right = 152.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="fire" type="Sprite2D" parent="cooking_minigame"]
position = Vector2(576, 424)
texture = ExtResource("3_uj045")

[node name="hitbox" type="Area2D" parent="cooking_minigame/fire"]
position = Vector2(-576, -424)
collision_layer = 0
collision_mask = 8

[node name="collision_shape" type="CollisionShape2D" parent="cooking_minigame/fire/hitbox"]
position = Vector2(576, 454.75)
shape = SubResource("RectangleShape2D_rpyik")

[node name="spawn_path" type="Path2D" parent="cooking_minigame"]
curve = SubResource("Curve2D_rpyik")

[node name="spawn_location" type="PathFollow2D" parent="cooking_minigame/spawn_path"]
position = Vector2(440, 190)

[node name="pan" type="AnimatedSprite2D" parent="cooking_minigame"]
position = Vector2(574, 406)
sprite_frames = SubResource("SpriteFrames_3o65x")
metadata/_edit_group_ = true

[node name="hitbox" type="Area2D" parent="cooking_minigame/pan"]
position = Vector2(-8, 6)
collision_layer = 0
collision_mask = 8

[node name="collision_shape" type="CollisionShape2D" parent="cooking_minigame/pan/hitbox"]
position = Vector2(8, -11.5)
shape = SubResource("RectangleShape2D_rbnn2")

[node name="controls" type="Label" parent="cooking_minigame"]
offset_left = 425.0
offset_top = 119.0
offset_right = 727.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("6_lre2m")
text = "click to flip the pan
move your mouse to move the pan"
horizontal_alignment = 1
uppercase = true

[node name="goal" type="Label" parent="cooking_minigame"]
offset_left = 425.0
offset_top = 479.0
offset_right = 727.0
offset_bottom = 528.0
theme_override_fonts/font = ExtResource("6_lre2m")
text = "don't let the food touch the fire"
horizontal_alignment = 1
uppercase = true

[node name="fishing_minigame" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_uj045")

[node name="background" type="ColorRect" parent="fishing_minigame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.99743e-06, 0.27536, 0.366037, 1)

[node name="fish_spawnpoints" type="Path2D" parent="fishing_minigame"]
curve = SubResource("Curve2D_uga2l")

[node name="fish_spawnlocation" type="PathFollow2D" parent="fishing_minigame/fish_spawnpoints"]
position = Vector2(416, 152)
rotation = 1.5708

[node name="midpoint" type="ColorRect" parent="fishing_minigame"]
visible = false
offset_left = 568.0
offset_top = 312.0
offset_right = 584.0
offset_bottom = 328.0

[node name="bounding_boxes" type="Node2D" parent="fishing_minigame"]

[node name="bounding_box" type="Area2D" parent="fishing_minigame/bounding_boxes"]
position = Vector2(376, 124)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fishing_minigame/bounding_boxes/bounding_box"]
position = Vector2(0, 201)
shape = SubResource("RectangleShape2D_jemb3")

[node name="bounding_box2" type="Area2D" parent="fishing_minigame/bounding_boxes"]
position = Vector2(776, 124)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fishing_minigame/bounding_boxes/bounding_box2"]
position = Vector2(0, 201)
shape = SubResource("RectangleShape2D_jemb3")

[node name="bounding_box3" type="Area2D" parent="fishing_minigame/bounding_boxes"]
position = Vector2(776, 120)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fishing_minigame/bounding_boxes/bounding_box3"]
position = Vector2(0, 197)
shape = SubResource("RectangleShape2D_jemb3")

[node name="bounding_box4" type="Area2D" parent="fishing_minigame/bounding_boxes"]
position = Vector2(776, 528)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fishing_minigame/bounding_boxes/bounding_box4"]
position = Vector2(0, 197)
shape = SubResource("RectangleShape2D_jemb3")

[node name="foreground" type="Sprite2D" parent="fishing_minigame"]
z_index = 10
position = Vector2(576, 323)
texture = ExtResource("8_uga2l")

[node name="crosshair" type="Area2D" parent="fishing_minigame"]
position = Vector2(1216, 320)
metadata/_edit_group_ = true

[node name="hitbox" type="CollisionShape2D" parent="fishing_minigame/crosshair"]
shape = SubResource("RectangleShape2D_jxykw")

[node name="sprite" type="Sprite2D" parent="fishing_minigame/crosshair"]
texture = ExtResource("9_uga2l")

[node name="midpoint_randomizer" type="Path2D" parent="fishing_minigame"]
curve = SubResource("Curve2D_jxykw")

[node name="midpoint_path_follow" type="PathFollow2D" parent="fishing_minigame/midpoint_randomizer"]
position = Vector2(520, 208)
rotation = 0.0665682

[connection signal="cooking_minigame_ended" from="cooking_minigame" to="." method="_emit_finished_signal"]
[connection signal="area_entered" from="cooking_minigame/fire/hitbox" to="cooking_minigame" method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="cooking_minigame/fire/hitbox" to="cooking_minigame" method="_on_hitbox_body_entered"]
